# dev-env-docker-parallel-computing

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.MD  docker-compose.dev.yml  main.cpp  results.csv  test.sh
src/: main.cpp  main.cpp.text
